--- a/jobmanager/builder/templates/code.html
+++ b/jobmanager/builder/templates/code.html
@@ -4,7 +4,7 @@
                     <td colspan="2">
                         <div id="editor" style="position: relative; min-height: 300px; width: 100%;">import mongoengine
 import subprocess
-from jobmanager.common.job import Job
+from jobmanager.common.job import Job, make_job
 
 
 @make_job("ExecuteJob",
